--- a/.github/workflows/ci_docker.yml
+++ b/.github/workflows/ci_docker.yml
@@ -94,9 +94,9 @@ jobs:
           && github.repository_owner == 'apache'
         run: |
           if [[ ${{ github.ref_name }} == ${{ github.event.repository.default_branch }} ]]; then
-            echo "::set-output name=match_master::true"
+            echo "name=match_master::true" >> $GITHUB_OUTPUT
           elif [[ ${{ github.ref_name }} =~ ^branch-[0-9]+\.[0-9]+$ ]]; then
-            echo "::set-output name=match_release::true"
+            echo "name=match_release::true" >> $GITHUB_OUTPUT
           fi
 
       # Publish x86 Docker images when the changes are being pushed to the master branch or a release branch like 'branch-1.4'.
